feat: begin work on jar chunk system